matroska-demux: Don't handle parse errors at the end of file as an error

But only if they happen after the Matroska segment.

https://bugzilla.gnome.org/show_bug.cgi?id=735833